Quotes App Final

--- a/k8s/db/secret.yaml
+++ b/k8s/db/secret.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-pass
+  name: quotes-db-secret
+  namespace: quotes-app
 type: Opaque
 data:
-  MYSQL_ROOT_PASSWORD: UGFzc3dvcmQxMjM=
+  root-password: UGFzc3dvcmQxMjMq # base64 encoded "Password123*"
+  db-password: YXBwdXNlcnBhc3Mq # base64 encoded "appuserpass*"
+  db-user: YXBwdXNlcg== # base64 encoded "appuser"
