--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,16 +1,13 @@
-FROM python:3.9
+FROM python:3.11-slim-bullseye
 
-# 
+RUN apt-get update && apt-get upgrade -y && apt-get clean
+
 WORKDIR /code
 
-# 
 COPY ./requirements.txt /code/requirements.txt
 
-# 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-# 
-COPY . /code/
+COPY ./api /code/api
 
-# 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["fastapi", "run", "api/main.py", "--port", "8000"]
